<resources>
    <string name="_0000_0000_0000_0000">0000 0000 0000 0000</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">ОДОБРИТЬ</string>
    <string name="account_detail">Реквизиты</string>
    <string name="account_detail_subtitle">Посмотрите все реквизиты по вкладу</string>
    <string name="account_is_open">Счет открыт</string>
    <string name="account_number_caption">Номер счета:</string>
    <string name="action_doing">Выполняем…</string>
    <string name="action_more">Больше</string>
    <string name="action_search">Поиск</string>
    <string name="action_settings">Settings</string>
    <string name="action_video">Видео</string>
    <string name="activation_step_1">Активация (Шаг 1 из 2)</string>
    <string name="activation_step_2">Активация (Шаг 2 из 2)</string>
    <string name="activity_code_input_erase_code">Стереть</string>
    <string name="activity_code_input_reset_code">Сбросить код</string>
    <string name="activity_login_button_login">Логин</string>
    <string name="activity_login_label_code">Код</string>
    <string name="activity_login_label_login">Логин</string>
    <string name="activity_not_found">Не удалось найти приложение для работы с PDF документами</string>
    <string name="activity_notifications_settings_title">Уведомления</string>
    <string name="activity_registration_activation_caption">Активация</string>
    <string name="activity_registration_code_textview_hint">Введите рокеткод</string>
    <string name="activity_registration_document_check_hint">Ожидайте проверку документов, это может занять некоторые время</string>
    <string name="activity_registration_phone_button_next">Дальше</string>
    <string name="activity_registration_phone_textedit_hint">(900) 000–00–00</string>
    <string name="activity_registration_phone_textview_hint">"Пожалуйста, введите номер
вашего телефона, чтобы начать"</string>
    <string name="activity_registration_phone_textview_number_hint">+7</string>
    <string name="activity_registration_process_card_release_caption">Выпуск карты</string>
    <string name="activity_registration_process_card_release_hint">Прямо сейчас мы выпускаем карту и выполняем бюрократические процедуры. Это займет примерно неделю. Мы оповестим вас, когда всё будет готово! А сейчас, если хотите, можете нам написать что-нибудь в чате «Службы поддержки».</string>
    <string name="activity_registration_process_fill_form">Заполнить анкету</string>
    <string name="activity_registration_process_fill_form_caption">Анкета</string>
    <string name="activity_registration_process_finish_caption">Финал</string>
    <string name="activity_registration_process_input_code">Придумать код</string>
    <string name="activity_registration_process_meeting_caption">Встреча</string>
    <string name="activity_registration_process_meeting_hint">Ваша карта готова. Скоро вам позвонят и договорятся о встрече. Если что-то не так - пишите нам в чат «Службы поддержки» (внизу экрана).</string>
    <string name="activity_registration_process_show_support">Служба поддержки</string>
    <string name="activity_registration_process_welcome">"Добро пожаловать
в Рокетбанк."</string>
    <string name="activity_registration_set_pin_button_text">ПРИДУМАЙТЕ ПИН КОД</string>
    <string name="activity_registration_sms_input">Поле ввода SMS</string>
    <string name="activity_registration_sms_resend_sms">Отправить SMS еще раз</string>
    <string name="activity_registration_sms_textview_hint">Введите код из SMS</string>
    <string name="activity_registration_sms_timer">Через 120 секунд</string>
    <string name="activity_reset_code_behappy">8 (800) 200-07‑08</string>
    <string name="activity_reset_code_call">Позвонить</string>
    <string name="activity_reset_code_dontworry">"Ничего страшного, позвоните
нам и мы вам поможем"</string>
    <string name="activity_reset_code_forgot">Забыли рокеткод?</string>
    <string name="activity_reset_code_remember">Я вспомнил код</string>
    <string name="activity_user_beginning_background">Фон экрана регистрации нового пользователя</string>
    <string name="ada_title">Реквизиты</string>
    <string name="add">приложите</string>
    <string name="add_to">Добавить в</string>
    <string name="add_to_ap">Добавить в Google Pay</string>
    <string name="address">Укажите точный адрес</string>
    <string name="admin_profile">Профиль</string>
    <string name="agree">Принять</string>
    <string name="all_rates_title">КУРСЫ</string>
    <string name="amount_title">Сумма</string>
    <string name="analytics_title">Аналитика</string>
    <string name="another_bank_card">Картой другого банка:</string>
    <string name="ap_add_to">Добавить в</string>
    <string name="ap_card_added">Карта добавлена в</string>
    <string name="ap_card_adding">Карта добавляется в</string>
    <string name="api_gnom">gnom</string>
    <string name="api_humans">human</string>
    <string name="api_lejeboker">lejeboker</string>
    <string name="api_link">api/v5/</string>
    <string name="api_orcs">orc</string>
    <string name="api_rickmorty">rickmorty</string>
    <string name="app_name">Рокетбанк</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_settings">Настройки приложения</string>
    <string name="apply">ПРИМЕНИТЬ</string>
    <string name="atm_details_find_and_press">Найдите и нажмите кнопку «Рокетбанк» на экране терминала.</string>
    <string name="atm_details_find_and_press_ors">Найдите и нажмите кнопку «ОРС» на экране терминала.</string>
    <string name="atm_details_how_to_refill">Как пополнить счет?</string>
    <string name="atm_details_how_to_refill_atm">Как пополнить счёт в банкомате?</string>
    <string name="atm_details_how_to_refill_terminal">Как пополнить счёт?</string>
    <string name="atm_details_insert_card">Вставьте карту в терминал и введите пинкод. Теперь можно пополнять счет. Лимиты пополнения расположены ниже.</string>
    <string name="atm_details_limits">Лимиты пополнения:</string>
    <string name="atm_details_limits_details">"15 000 ₽ за операцию
100 000 ₽ в день
8 операций в день
до 100 000 ₽ за 4 дня
480 000 ђ в месяц"</string>
    <string name="atm_details_ors_hint">"Ищите банкомат
с логотипом
сети ОРС"</string>
    <string name="atm_details_title">Пополнение</string>
    <string name="atms_loading_failed">Не удалось загрузить список банкоматов</string>
    <string name="bank">Банк</string>
    <string name="bank_address">Адрес банка получателя</string>
    <string name="bank_corr">Банк корреспондент</string>
    <string name="bank_receiver">Банк получателя</string>
    <string name="correspondent_account">Корреспондентский счёт</string>
    <string name="fragment_userfeed_refill_transfer_bic_caption">БИК</string>
    <string name="fragment_userfeed_refill_transfer_inn_caption">ИНН</string>
    <string name="fragment_userfeed_refill_transfer_kpp_caption">КПП</string>
    <string name="fragment_userfeed_refill_transfer_sender_caption">Получатель</string>
    <string name="fragment_userfeed_refill_transfer_target_caption">Назначение платежа</string>
    <string name="fri">Пт</string>
    <string name="mon">Пн</string>
    <string name="remittance_first_step">Для начала заполните БИК и номер счета получателя</string>
    <string name="remittance_second_step">Заполните остальные поля</string>
    <string name="remittance_title">Перевод по реквизитам</string>
    <string name="sat">Сб</string>
    <string name="sun">Вс</string>
    <string name="swift">SWIFT</string>
    <string name="this_is_tax">Это налоговый платёж</string>
    <string name="thu">Чт</string>
    <string name="transfers_bank_bik_caption">БИК банка-получателя</string>
    <string name="transfers_bank_bik_placeholder">000000000</string>
    <string name="transfers_bank_number_caption">Номер счета</string>
    <string name="transfers_bank_pay_inn_from_placeholder">12 цифр</string>
    <string name="transfers_bank_receiver_caption">Получатель</string>
    <string name="transfers_bank_receiver_card_number_placeholder">0000 0000 0000 0000</string>
    <string name="transfers_bank_receiver_from_caption">Плательщик</string>
    <string name="transfers_bank_receiver_from_placeholder">Фамилия Имя Отчество</string>
    <string name="transfers_bank_receiver_inn_caption">ИНН получателя</string>
    <string name="transfers_bank_receiver_inn_from_mandatory_caption">ИНН платeльщика</string>
    <string name="transfers_bank_receiver_inn_placeholder">0000000000</string>
    <string name="transfers_bank_receiver_kbk_caption">Код Бюджетной Классификации</string>
    <string name="transfers_bank_receiver_kbk_placeholder">000 0 00 00000 00 0000 000</string>
    <string name="transfers_bank_receiver_kpp_placeholder">000000000</string>
    <string name="transfers_bank_receiver_number_placeholder">0000 0000 0000 0000 0000</string>
    <string name="transfers_bank_receiver_oktmo_caption">ОКТМО</string>
    <string name="transfers_bank_receiver_oktmo_placeholder">8 цифр</string>
    <string name="transfers_bank_receiver_target_caption">Назначение перевода</string>
    <string name="transfers_bank_receiver_target_hint">Не более 210 символов</string>
    <string name="transfers_bank_receiver_tax_basis_caption">Основание налогового платежа</string>
    <string name="transfers_bank_receiver_uin_caption">Код или индекс документа (УИН)</string>
    <string name="transfers_bank_receiver_uin_placeholder">Введите номер</string>
    <string name="transfers_budget_receiver_kpp_caption">КПП получателя</string>
    <string name="transfers_budget_receiver_placeholder">Наименование организации</string>
    <string name="transfers_budget_status">Статус составителя перевода</string>
    <string name="transfers_card_number_caption">Номер карты получателя</string>
    <string name="tue">Вт</string>
    <string name="wen">Ср</string>
</resources>