<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/widget_calendar_view_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ru.rocketbank.core.widgets.RocketTextView android:textAppearance="@android:style/TextAppearance.Medium" android:textSize="19.0sp" android:textColor="@color/black_universal" android:layout_gravity="center" android:id="@id/calendar_date_display" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:rocket_font="medium" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/calendar_header" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/black_universal_70" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/mon" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black_universal_70" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tue" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black_universal_70" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/wen" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black_universal_70" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/thu" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black_universal_70" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fri" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black_universal_70" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sat" android:layout_weight="1.0" />
        <TextView android:textColor="@color/black_universal_70" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sun" android:layout_weight="1.0" />
    </LinearLayout>
    <android.support.v7.widget.GridLayout android:gravity="center" android:id="@id/calendar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:stretchMode="none" />
</LinearLayout>